--- a/Spring-Rabbit/src/main/resources/application.properties
+++ b/Spring-Rabbit/src/main/resources/application.properties
@@ -1,17 +1,16 @@
-spring.application.name=ravgiit
-# Server Configuration
-server.port=8080
+# ~/repos-ucc/Final Sistemas Distribuidos/Spring-Rabbit/src/main/resources/application.properties
 
-# MongoDB Configuration
-spring.data.mongodb.  type="code"
-# Server Configuration
-
-# MongoDB Configuration
-spring.data.mongodb.uri=mongodb://mongodb-replica-1:27017,mongodb-replica-2:27017,mongodb-replica-3:27017/claims
-spring.data.mongodb.database=claims
+spring.application.name=demo
+# MongoDB Configuration (empty - relying on environment variable)
 spring.data.mongodb.auto-index-creation=true
+# En application.properties (o su equivalente en YAML)
+spring.data.mongodb.host=mongodb-service # Usar el nombre del servicio que creaste
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=claims-db # O el nombre de tu base de datos
+spring.data.mongodb.username=admin # Si configuraste usuario/contraseña en MongoDB
+spring.data.mongodb.password=password # Si configuraste usuario/contraseña en MongoDB
 
-# RabbitMQ Configuration
+# RabbitMQ Configuration (redundant if environment variables are set, but harmless)
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
@@ -19,11 +18,11 @@ spring.rabbitmq.password=guest
 
 # RabbitMQ Exchange and Queue Names
 rabbitmq.exchange.name=claims_exchange
-rabbitmq.queue.claim.created=claims_created_queue
-rabbitmq.queue.claim.updated=claims_updated_queue
 rabbitmq.routing.key.claim.created=claims.created
 rabbitmq.routing.key.claim.updated=claims.updated
 
 # Logging Configuration
 logging.level.com.seguros.claims=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+management.endpoints.web.exposure.include=health,info
