--- a/kubernetes/rabbitmq-deployment.yaml
+++ b/kubernetes/rabbitmq-deployment.yaml
@@ -1,3 +1,5 @@
+# ~/repos-ucc/Final Sistemas Distribuidos/kubernetes/rabbitmq-deployment.yaml
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,84 +18,51 @@ spec:
     spec:
       containers:
       - name: rabbitmq
-        image: rabbitmq:3.9-management
+        image: rabbitmq:3-management-alpine
         ports:
         - containerPort: 5672
-          name: amqp
-        - containerPort: 15672
-          name: management
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "200m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
+        - containerPort: 15672 # Para la interfaz de administración (opcional, pero útil)
         env:
         - name: RABBITMQ_DEFAULT_USER
           value: "guest"
         - name: RABBITMQ_DEFAULT_PASS
           value: "guest"
-        volumeMounts:
-        - name: rabbitmq-data
-          mountPath: /var/lib/rabbitmq
-        readinessProbe:
-          tcpSocket:
-            port: 5672
-          initialDelaySeconds: 10
-          periodSeconds: 10
         livenessProbe:
           tcpSocket:
             port: 5672
-          initialDelaySeconds: 30
-          periodSeconds: 30
-      volumes:
-      - name: rabbitmq-data
-        persistentVolumeClaim:
-          claimName: rabbitmq-data-pvc
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: rabbitmq-data-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
+          initialDelaySeconds: 60 # Aumentado de 30 a 60 segundos
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          tcpSocket:
+            port: 5672
+          initialDelaySeconds: 30 # Aumentado de 10 a 30 segundos
+          periodSeconds: 5
+          timeoutSeconds: 2
+          failureThreshold: 3
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq
+  labels:
+    app: rabbitmq
 spec:
+  type: ClusterIP
+  ports:
+    - port: 5672
+      targetPort: 5672
+      name: amqp
+    - port: 15672
+      targetPort: 15672
+      name: management
   selector:
     app: rabbitmq
-  ports:
-  - port: 5672
-    targetPort: 5672
-    name: amqp
-  - port: 15672
-    targetPort: 15672
-    name: management
-  type: ClusterIP
----
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: rabbitmq-hpa
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: rabbitmq
-  minReplicas: 1
-  maxReplicas: 3
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 70
